Ajustes no código

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           :total-items="brands.length"
           :loading="loadingBrands"
           :loading-failed="getBrandsFailed"
-          @show-models="getModel"
+          @show-models="getModels"
           @hide-models="hideModels"
           @change-page="page => brandsPage = page"
         ></n-table>
